--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
  <body>
      <header>
        <h1>
-        Design conference——Typography In Web Design
+        Design conference<br>
+         ——Typography In Web Design
        </h1>
-   </header>
+      </header>
+       <nav>
+      <ul class="navigation" >  
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Speakers</a></li>
+      <li><a href="#">Register</a></li>
+      <li><a href="#">Contact</a></li>
+      </ul> 
+      </nav>
+  
  </body>
  </html>
