😀💪 Checkpoint ./index.html:22199794/343

--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
        </h1>
       </header>
        <nav>
-      <ul class="navigation" >  
+      <ul class="u-list-reset" >  
       <li><a href="#">Home</a></li>
       <li><a href="#">Speakers</a></li>
       <li><a href="#">Register</a></li>
       <li><a href="#">Contact</a></li>
       </ul> 
       </nav>
-  
+   <main>
+     <img
+        src=""
+        alt=""
+      />
+   </main>
  </body>
  </html>
