👰🌠 Checkpoint ./.glitch-assets:22199794/4921 ./index.html:22199794/616

--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@
       </ul> 
       </nav>
    <main>
-     <img
-        src=""
-        alt=""
-      />
+     <img src="https://cdn.glitch.com/0e85a349-5917-49b5-9721-e8ec891917e8%2F1.png?v=1607879901347"
+        alt="Photo of Jordan Devos" />
    </main>
  </body>
  </html>
