--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
    <main>
      <img src="https://cdn.glitch.com/0e85a349-5917-49b5-9721-e8ec891917e8%2F1.png?v=1607879901347"
         alt="Photo of Jordan Devos" />
+     <img src="https://cdn.glitch.com/0e85a349-5917-49b5-9721-e8ec891917e8%2FPhoto%20of%20Suzanne%20Scacca.png?v=1607880365444"
+        alt="Photo of Suzanne Scacca" />
    </main>
  </body>
  </html>
