💕👂 Checkpoint ./index.html:22199794/651

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
    <main>
      <img src="https://cdn.glitch.com/0e85a349-5917-49b5-9721-e8ec891917e8%2F1.png?v=1607879901347"
         alt="Photo of Jordan Devos" />
-     <h3>
-       <h3>
+     <h3>Jordan Devos</h3>
+     <h4>Talk: Designing for Readability – A Guide to Web Typography<br>
+       Time：10 AM - 12 PM, 
+     </h4>
+     <p>Description: Traditionally, graphic designers have always studied the fundamentals of typography in terms of print design. But as the role of the designer now spans across all types of digital mediums, typography is a bigger beast to tame. In this talk, Devos will introduce some web typography tips about the web typeface and formatting which leads to the best reading experience.</p>
        <p>
        </p>
      <img src="https://cdn.glitch.com/0e85a349-5917-49b5-9721-e8ec891917e8%2FPhoto%20of%20Suzanne%20Scacca.png?v=1607880365444"
