🚶👟 Checkpoint ./index.html:22199794/492

--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
      <img src="https://cdn.glitch.com/0e85a349-5917-49b5-9721-e8ec891917e8%2Fphoto%20ofCameron%20Chapman.png?v=1607880869268"
         alt="Photo of Cameron Chapman" />
      <h3>Cameron Chapman</h3>
-     <h4>A Reference Guide For Typography In Mobile Web Design <br>
-       Time：13 PM - 15PM, February 1st, 2021
+     <h4>How to Structure an Effective Typographic Hierarchy <br>
+       Time：16 PM - 18PM, February 1st, 2021
      </h4>
-     
+     <p>Description: Effectively organizing content within a design so that it’s easy to understand and consume is one of a designer’s most important jobs. And since much of the content designers work with is text-based, creating an effective typographic hierarchy is one of the most important things a designer can learn. In this talk, Chapman will introduce the concept of “typographic hierarchy” which is very useful for web designers.</p>
      
    </main>
+   <foot>
+    <button> type
+   </foot>
  </body>
  </html>
