📈⛷ Checkpoint ./index.html:22199794/281

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
       </ul> 
       </nav>
    <main>
+     <h2></h2>
      <ul class="u-list-reset ">
     <li class="talk1">
      <img src="https://cdn.glitch.com/0e85a349-5917-49b5-9721-e8ec891917e8%2F1.png?v=1607879901347"
-        alt="Photo of Jordan Devos" />
+        alt="A woman with blonde hair smiling towards the camera" />
      <h3>Jordan Devos</h3>
      <h4>Talk: Designing for Readability – A Guide to Web Typography<br>
        Time：10 AM - 12 PM, February 1st, 2021
@@ -40,7 +41,7 @@
     
       <li class="talk2"> 
      <img src="https://cdn.glitch.com/0e85a349-5917-49b5-9721-e8ec891917e8%2FPhoto%20of%20Suzanne%20Scacca.png?v=1607880365444"
-        alt="Photo of Suzanne Scacca" />
+        alt="A woman with short brown hair and glasses is in front of the camera" />
       <h3>Suzanne Scacca</h3>
      <h4>A Reference Guide For Typography In Mobile Web Design <br>
        Time：13 PM - 15PM, February 1st, 2021
@@ -51,7 +52,7 @@
        
        <li class="talk3">
      <img src="https://cdn.glitch.com/0e85a349-5917-49b5-9721-e8ec891917e8%2Fphoto%20ofCameron%20Chapman.png?v=1607880869268"
-        alt="Photo of Cameron Chapman" />
+        alt="A woman with brown hair is smiling at the camera" />
      <h3>Cameron Chapman</h3>
      <h4>How to Structure an Effective Typographic Hierarchy <br>
        Time：16 PM - 18PM, February 1st, 2021
