--- a/index.html
+++ b/index.html
@@ -16,14 +16,19 @@
          <div>——Typography In Web Design</div>
        </h1>
        </section>
+       
       </header>
        <nav>
-      <ul class="navigation" >  
+      <ul class="u-list-reset" >  
       <li><a href="#home">Home</a></li>
       <li><a href="#talks">Talks</a></li>
       <li><a href="#register">Register</a></li>
       </ul> 
       </nav>
+   
+   
+   
+   
    
    <main>
      <section id="talks">
@@ -66,7 +71,6 @@
     
      </section>
    </main>
-   
  </body>
    
    
