🌇🌂 Checkpoint ./index.html:22199794/5371

--- a/index.html
+++ b/index.html
@@ -16,19 +16,14 @@
          <div>——Typography In Web Design</div>
        </h1>
        </section>
-       
       </header>
-       <nav>
-      <ul class="u-list-reset" >  
+       <nav class="site-menu">
+      <ul id="site-menu" class="u-list-reset" >  
       <li><a href="#home">Home</a></li>
       <li><a href="#talks">Talks</a></li>
       <li><a href="#register">Register</a></li>
       </ul> 
       </nav>
-   
-   
-   
-   
    
    <main>
      <section id="talks">
@@ -71,6 +66,8 @@
     
      </section>
    </main>
+     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="menu.js"></script>
  </body>
    
    
