💇🙅 Checkpoint ./index.html:22199794/28 ./styles.css:22199794/1311

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <input type="email" id="email" name="email">
   </li>
 <li class="button">
-  <button type="submit">Register</button>
+  <button type="submit" class="button-reset button">Register</button>
 </li>
  </ul>
 </form>
