--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <section id="register">
       <h2>Register</h2>
      <form action="/my-handling-form-page" method="post">
- <ul>
+ <ul class="form">
   <li>
     <label for="name">Name:</label>
     <input type="text" id="name" name="user_name">
