🏈⛺️ Checkpoint ./index.html:22199794/175 ./styles.css:22199794/401

--- a/index.html
+++ b/index.html
@@ -31,11 +31,15 @@
      <ul class="talks">
        <li class="talk1">
      <img src="https://cdn.glitch.com/0e85a349-5917-49b5-9721-e8ec891917e8%2F1.png?v=1607879901347"
-        alt="A woman with blonde hair smiling towards the camera" />
+        alt="A woman with blonde hair smiling towards the camera" 
+          class="speaker-photo"/>
+      <div class="talk-information">   
      <h3>Jordan Devos</h3>
+         
      <h4>Talk: Designing for Readability – A Guide to Web Typography
        <div>Time：10 AM - 12 PM, February 1st, 2021</div>
      </h4>
+        </div>
      <p>
        About the speaker: Jordan is an expert designer whose focus is on visual communications and whose work integrates strategy, service design, and UX/UI. She has worked in a range of companies, from corporate in-house to boutique design studios. A self-starter who wears many hats, Jordan is in her element leading a project or managing a team.
      </p>
