--- a/index.html
+++ b/index.html
@@ -48,22 +48,28 @@
     
     <li class="talk2">
      <img src="https://cdn.glitch.com/0e85a349-5917-49b5-9721-e8ec891917e8%2FPhoto%20of%20Suzanne%20Scacca.png?v=1607880365444"
-        alt="A woman with short brown hair and glasses is in front of the camera" />
+        alt="A woman with short brown hair and glasses is in front of the camera" 
+          class="speaker-photo"/>
+       <div class="talk-information">   
       <h3>Suzanne Scacca</h3>
      <h4>A Reference Guide For Typography In Mobile Web Design 
        <div>Time：13 PM - 15PM, February 1st, 2021</div>
      </h4>
+      </div>
      <p>About the speaker: Suzanne Scacca is a former WordPress implementer, trainer and agency manager who now works as a freelance copywriter. She specializes in crafting marketing, web design, WordPress and millennial-related content for a variety of publications.</p>
      <p>Description: In terms of how to handle typography in mobile web design, it appears that simpler and safer works best. In this talk, Scacca will lead to break down the elements designers need to pay attention to in mobile typography and then visit what the research says about how to handle them. </p>
        </li>
        
       <li class="talk3"> 
      <img src="https://cdn.glitch.com/0e85a349-5917-49b5-9721-e8ec891917e8%2Fphoto%20ofCameron%20Chapman.png?v=1607880869268"
-        alt="A woman with brown hair is smiling at the camera" />
+        alt="A woman with brown hair is smiling at the camera" 
+          class="speaker-photo"/>
+        <div class="talk-information">  
      <h3>Cameron Chapman</h3>
      <h4>How to Structure an Effective Typographic Hierarchy 
        <div> Time：16 PM - 18PM, February 1st, 2021</div>
      </h4>
+        </div>
      <p>About the speaker: Cameron Chapman (Orleans, VT) is a freelance designer and writes on the subject of design for Smashing Magazine, Mashable, Webdesigner Depot, Six Revisions, and other prominent design blogs.</p>
      <p>Description: Effectively organizing content within a design so that it’s easy to understand and consume is one of a designer’s most important jobs. And since much of the content designers work with is text-based, creating an effective typographic hierarchy is one of the most important things a designer can learn. In this talk, Chapman will introduce the concept of “typographic hierarchy” which is very useful for web designers.</p>
        </li>
