--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
      </h4>
         </div>
      <p>
-       About the speaker: Jordan is an expert designer whose focus is on visual communications and whose work integrates strategy, service design, and UX/UI. She has worked in a range of companies, from corporate in-house to boutique design studios. A self-starter who wears many hats, Jordan is in her element leading a project or managing a team.
+       <strong>About the speaker:</strong> Jordan is an expert designer whose focus is on visual communications and whose work integrates strategy, service design, and UX/UI. She has worked in a range of companies, from corporate in-house to boutique design studios. A self-starter who wears many hats, Jordan is in her element leading a project or managing a team.
      </p>
-     <p>Description: Traditionally, graphic designers have always studied the fundamentals of typography in terms of print design. But as the role of the designer now spans across all types of digital mediums, typography is a bigger beast to tame. In this talk, Devos will introduce some web typography tips about the web typeface and formatting which leads to the best reading experience.</p>
+         <p><strong>Description:</strong> Traditionally, graphic designers have always studied the fundamentals of typography in terms of print design. But as the role of the designer now spans across all types of digital mediums, typography is a bigger beast to tame. In this talk, Devos will introduce some web typography tips about the web typeface and formatting which leads to the best reading experience.</p>
        </li>
     
     <li class="talk2">
