🗽🏰 Checkpoint ./index.html:22199794/116 ./styles.css:22199794/192

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
        <div>Time：13 PM - 15PM, February 1st, 2021</div>
      </h4>
       </div>
-     <p>About the speaker: Suzanne Scacca is a former WordPress implementer, trainer and agency manager who now works as a freelance copywriter. She specializes in crafting marketing, web design, WordPress and millennial-related content for a variety of publications.</p>
-     <p>Description: In terms of how to handle typography in mobile web design, it appears that simpler and safer works best. In this talk, Scacca will lead to break down the elements designers need to pay attention to in mobile typography and then visit what the research says about how to handle them. </p>
+      <p><strong>About the speaker:</strong> Suzanne Scacca is a former WordPress implementer, trainer and agency manager who now works as a freelance copywriter. She specializes in crafting marketing, web design, WordPress and millennial-related content for a variety of publications.</p>
+      <p><strong>Description:</strong> In terms of how to handle typography in mobile web design, it appears that simpler and safer works best. In this talk, Scacca will lead to break down the elements designers need to pay attention to in mobile typography and then visit what the research says about how to handle them. </p>
        </li>
        
       <li class="talk3"> 
@@ -70,8 +70,8 @@
        <div> Time：16 PM - 18PM, February 1st, 2021</div>
      </h4>
         </div>
-     <p>About the speaker: Cameron Chapman (Orleans, VT) is a freelance designer and writes on the subject of design for Smashing Magazine, Mashable, Webdesigner Depot, Six Revisions, and other prominent design blogs.</p>
-     <p>Description: Effectively organizing content within a design so that it’s easy to understand and consume is one of a designer’s most important jobs. And since much of the content designers work with is text-based, creating an effective typographic hierarchy is one of the most important things a designer can learn. In this talk, Chapman will introduce the concept of “typographic hierarchy” which is very useful for web designers.</p>
+        <p><strong>About the speaker:</strong> Cameron Chapman (Orleans, VT) is a freelance designer and writes on the subject of design for Smashing Magazine, Mashable, Webdesigner Depot, Six Revisions, and other prominent design blogs.</p>
+        <p><strong>Description: </strong>Effectively organizing content within a design so that it’s easy to understand and consume is one of a designer’s most important jobs. And since much of the content designers work with is text-based, creating an effective typographic hierarchy is one of the most important things a designer can learn. In this talk, Chapman will introduce the concept of “typographic hierarchy” which is very useful for web designers.</p>
        </li>
        </ul>
     
